--- a/FuelEconomyLookup/app/src/main/res/values/strings.xml
+++ b/FuelEconomyLookup/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Fuel Economy Lookup</string>
+    <string name="activity_saved_vehicle_list_title">Saved Vehicles</string>
+    <string name="activity_select_vehicle_title">Select a vehicle</string>
+    <string name="activity_vehicle_info_title">Vehicle Info</string>
 </resources>
